# Anti-Drone-GUI

./: DOCUMENTATION.md  README.md  package.json  status_tracker.xlsx
code/: .pnp.cjs  README.md  TODO.txt  package.json  vite.config.ts
code/src/: App.css  App.tsx  colorCode.ts
code/src-tauri/: Cargo.toml  aaa.txt
code/src-tauri/src/: arkana.rs  fod_watcher.rs  foreign_object.rs  ftp.rs  main.rs  nokill.rs  old_nokill.rs  old_settings.rs  settings.rs  usb_serial.rs
code/src/components/: ActionMenu.tsx  AlertBar.tsx  AmmunitionStatus.tsx  FODCard.tsx  (+37 more)
docs/: Link_to_the_status_tracker  StatusTracker_week10.xlsx  StatusTracker_week12.xlsx  StatusTracker_week13.xlsx  StatusTracker_week4.xlsx  StatusTracker_week7.xlsx  StatusTracker_week8.xlsx  team_41_statustracker.xlsx  team_41_test_plan.xlsx
src/: colorCode.ts  main.tsx
src-tauri/: demo.json  modifications.txt  tauri.conf.json
src-tauri/src/: db_settings.rs  drone_commands.rs  fod_watcher.rs  messages.rs  settings.rs
src/components/: ActionMenu.tsx  AlertBar.tsx  AmmunitionStatus.tsx  CommLinks.tsx  DroneAmmunitionIndicator.tsx  DroneBatteryIndicator.tsx  DroneMap.tsx  DronePortIndicator.tsx  DronesMapManager.tsx  EnemyDroneStatus.tsx  FODMap.tsx  FODProgress.tsx  Map.css  Map.tsx  MapHiderWhenNotConnected.tsx  MissionControl.tsx  NoKillZones.tsx  Only.tsx  RFDSettings.tsx  SwipeableReadyDrawer.tsx  VideoFeed.tsx  VideoFeedFullScreen.tsx  VitalStatus.tsx
src/contexts/: AlertContext.tsx  MapControlContext.tsx  PhaseContext.tsx
src/machines/: fodDataMachine.typegen.ts  mainMachine.ts  mapControlMachine.ts
(+8 files in other folders)
