[package]
name = "foreign-object-detector"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "protocol-asset", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
mavlink = { git = "https://github.com/Arka-Aerospace/Custom_Mavlink_Rust1.git", features = ["format-generated-code"] }
heapless = "0.7.16"
bus = "2.4.0"
threadpool = "1.8.1"
serialport = "4.2.1"
names = { version = "0.14.0", default-features = false }
glob = "0.3.1"
crossbeam-channel = "0.5"
notify = { version = "6.0.1", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
